GNOME Bugzilla – Bug 641599
deinterlace: changing "mode" property on-the-fly doesn't work
Last modified: 2013-07-22 17:05:26 UTC
With the latetst release I can not longer switch the deinterlace on/off via the mode property at running pipeline. Switching off via mode=disabled works, but it can not be reenabled again with mode=auto. Forcing mode=deinterlaced works. Using mode=auto works when set at paused/stopped pipeline. With 0.10.26 the auto detection was working fine.
Created attachment 249820 [details] test-deinterlace-switch.c
This works again for me now after commit f18b1f7e80de90d6465409455d9447008ec9f01a Author: Tim-Philipp Müller <tim.muller@collabora.co.uk> Date: Mon Jul 22 18:00:16 2013 +0100 deinterlace: fix on-the-fly changing of "mode" and "fields" properties We call setcaps() to reconfigure ourselves, but we need to pass the current *sink* caps, not the source caps then. Also fix a caps leak. https://bugzilla.gnome.org/show_bug.cgi?id=641599 though the original bug in 0.10 may have been something else.